hard-gists/7946246/run.log
=== Docker Run Log for 7946246 ===
Started at: Mi 29. Okt 17:22:46 CET 2025

[2025-10-29 17:22:47] START: Running container for 7946246
[2025-10-29 17:22:47] SUCCESS: Container 9c74818e8fb87e82009c1005591a5cf028e16232407796f128593db09089861d started for 7946246
=== Container logs for 7946246 ===
  File "/snippet.py", line 15
    print data.shape[0]
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7946246 ===
[2025-10-29 17:22:49] INFO: Container 9c74818e8fb87e82009c1005591a5cf028e16232407796f128593db09089861d has stopped
